--- a/Fantur/Fantur.Core/Fantur.Core.csproj
+++ b/Fantur/Fantur.Core/Fantur.Core.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Compile Include="Component.cs" />
     <Compile Include="Components\NamedEntity.cs" />
+    <Compile Include="Components\UniverseTestTracker.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="Universe.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
