Create game universe, list planets!

--- a/Fantur/Fantur.Android/Fantur.AndroidApp.csproj
+++ b/Fantur/Fantur.Android/Fantur.AndroidApp.csproj
@@ -71,6 +71,12 @@
   <ItemGroup>
     <None Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Fantur.Core\Fantur.Core.csproj">
+      <Project>{c63a8b78-3f32-4ee5-9ba4-8c1de3df5795}</Project>
+      <Name>Fantur.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
      Other similar extension points exist, see Microsoft.Common.targets.
