Rename Android app to fix namespace issues

--- a/Fantur/Fantur.AndroidApp/Fantur.AndroidApp.csproj
+++ b/Fantur/Fantur.AndroidApp/Fantur.AndroidApp.csproj
@@ -5,12 +5,12 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{474CD790-FDD3-4FCF-8907-8124742A00B4}</ProjectGuid>
+    <ProjectGuid>{13365A13-379C-4994-BDD9-4759FBD4A66C}</ProjectGuid>
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Fantur.Android</RootNamespace>
-    <AssemblyName>Fantur.Android</AssemblyName>
+    <RootNamespace>Fantur.AndroidApp</RootNamespace>
+    <AssemblyName>Fantur.AndroidApp</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <AndroidApplication>true</AndroidApplication>
     <AndroidResgenFile>Resources\Resource.Designer.cs</AndroidResgenFile>
@@ -54,6 +54,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="GettingStarted.Xamarin" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
   </ItemGroup>
@@ -70,12 +71,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\AndroidManifest.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Fantur.Core\Fantur.Core.csproj">
-      <Project>{c63a8b78-3f32-4ee5-9ba4-8c1de3df5795}</Project>
-      <Name>Fantur.Core</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
