--- a/Fantur/Fantur.AndroidApp/Fantur.AndroidApp.csproj
+++ b/Fantur/Fantur.AndroidApp/Fantur.AndroidApp.csproj
@@ -56,6 +56,9 @@
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
+    <AndroidResource Include="Resources\layout\Main.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\Strings.xml" />
@@ -66,9 +69,7 @@
   <ItemGroup>
     <None Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\layout\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Fantur.Core\Fantur.Core.csproj">
       <Project>{c63a8b78-3f32-4ee5-9ba4-8c1de3df5795}</Project>
